--- a/tests/index.html
+++ b/tests/index.html
@@ -1,3 +1,3 @@
-{{> hello english}}
-{{> hello french}}
-{{> hello spanish}}
+{{#with english}}{{> tests.hello}}{{/with}}
+{{#with french}}{{> tests.hello}}{{/with}}
+{{> tests.hello spanish}}
