Added def and ifeval to plugin

--- a/tests/index.html
+++ b/tests/index.html
@@ -1,3 +1,12 @@
-{{#each languages}}
-	{{> tests.hello this}}
-{{/each}}
+Each test
+{{#each languages}} {{> tests.hello this}} {{/each}}
+
+Range test
+{{#range 10}} 
+key: {{key}}, value: {{value}}  {{/range}}
+
+ifeval test
+{{#ifeval "languages.spanish.hello == 'Hola'"}}Pass{{/ifeval}}
+
+def test
+{{def languages.german.hello def="German Not Found"}}
