Added multiple path lookups in view resolver.

--- a/tests/default/index.html
+++ b/tests/default/index.html
@@ -1,5 +1,5 @@
 Each test
-{{#each languages}} {{> tests.hello this}} {{/each}}
+{{#each languages}} {{> hello this}} {{/each}}
 
 Range test
 {{#range 10}} 
